--- a/2503.20704/cat-has-colimits.tex
+++ b/2503.20704/cat-has-colimits.tex
@@ -123,7 +123,7 @@
 
 
 \newcommand{\Fin}{\cat{Fin}}
-\newcommand{\Cat}{\mathcal{C}\cat{at}}
+\newcommand{\Cat}{\mathcal{C}{\kern-.75pt}\cat{at}}
 \newcommand{\Set}{\mathcal{S}\cat{et}}
 \newcommand{\Quiv}{\mathcal{Q}\cat{uiv}}
 \newcommand{\QCat}{\mathcal{QC}\cat{at}}
