--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,21 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2024-12-30 20:16:17 -0500 
+%% Created for Pete Su at 2025-06-10 06:58:35 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Riehl2025,
+	author = {Mario Carneiro and Emily Riehl},
+	date-added = {2025-06-10 06:58:08 -0400},
+	date-modified = {2025-06-10 06:58:35 -0400},
+	journal = {arXiv preprint},
+	note = {\href{http://arxiv.org/abs/2503.20704v1}{arxiv:2503.20704}},
+	title = {{Formalizing colimits in Cat}},
+	year = {2025}}
 
 @article{Strasberg2024,
 	author = {Strasberg, Philipp and Reinhard, Teresa E. and Schindler, Joseph},
