up to Kibble1961

--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,141 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2025-06-10 06:58:35 -0400 
+%% Created for Pete Su at 2025-06-10 07:31:14 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Kibble1961,
+	author = {Kibble, T. W. B.},
+	date-added = {2025-06-10 07:31:11 -0400},
+	date-modified = {2025-06-10 07:31:11 -0400},
+	doi = {10.1063/1.1703702},
+	issn = {1089-7658},
+	journal = {J. Math. Phys.},
+	number = {2},
+	pages = {212--221},
+	publisher = {AIP Publishing},
+	title = {Lorentz Invariance and the Gravitational Field},
+	url = {http://dx.doi.org/10.1063/1.1703702},
+	volume = {2},
+	year = {1961},
+	bdsk-url-1 = {http://dx.doi.org/10.1063/1.1703702}}
+
+@article{Sahni2008,
+	author = {Sahni, Varun and Krasi{\'n}ski, Andrzej},
+	date-added = {2025-06-10 07:30:21 -0400},
+	date-modified = {2025-06-10 07:30:35 -0400},
+	doi = {10.1007/s10714-008-0624-6},
+	issn = {1572-9532},
+	journal = {Gen. Relat. Gravit.},
+	number = {7},
+	pages = {1557--1591},
+	publisher = {Springer Science and Business Media LLC},
+	title = {{Republication of: The cosmological constant and the theory of elementary particles (By Ya. B. Zeldovich)}},
+	url = {http://dx.doi.org/10.1007/s10714-008-0624-6},
+	volume = {40},
+	year = {2008},
+	bdsk-url-1 = {http://dx.doi.org/10.1007/s10714-008-0624-6}}
+
+@incollection{Zeldovich1993,
+	author = {Yakov Borisovich Zeldovich and E. Jackson and A. Granik},
+	booktitle = {Selected Works of Yakov Borisovich Zeldovich, Volume II: Particlies, Nuclei, and the Universe},
+	chapter = {27},
+	date-added = {2025-06-10 07:19:42 -0400},
+	date-modified = {2025-06-10 07:29:00 -0400},
+	pages = {165--167},
+	publisher = {Princeton University Press},
+	title = {The Cosmological Constant and Elementeiry Particles},
+	url = {http://www.jstor.org/stable/j.ctt1m323p1.31},
+	year = {1993},
+	bdsk-url-1 = {http://www.jstor.org/stable/j.ctt1m323p1.31}}
+
+@article{Zeldovich1968,
+	author = {Zel'dovich, Ya B},
+	date-added = {2025-06-10 07:17:21 -0400},
+	date-modified = {2025-06-10 07:17:31 -0400},
+	doi = {10.1070/pu1968v011n03abeh003927},
+	issn = {0038-5670},
+	journal = {Soviet Physics Uspekhi},
+	number = {3},
+	pages = {381--393},
+	publisher = {IOP Publishing},
+	title = {The cosmological constant and the theory of elementary particles},
+	url = {http://dx.doi.org/10.1070/pu1968v011n03abeh003927},
+	volume = {11},
+	year = {1968},
+	bdsk-url-1 = {http://dx.doi.org/10.1070/pu1968v011n03abeh003927}}
+
+@book{Hawking1973,
+	author = {Hawking, S. W. and Ellis, G. F. R.},
+	date-added = {2025-06-10 07:15:05 -0400},
+	date-modified = {2025-06-10 07:15:05 -0400},
+	doi = {10.1017/cbo9780511524646},
+	isbn = {9780511524646},
+	publisher = {Cambridge University Press},
+	title = {The Large Scale Structure of Space-Time},
+	url = {http://dx.doi.org/10.1017/cbo9780511524646},
+	year = {1973},
+	bdsk-url-1 = {http://dx.doi.org/10.1017/cbo9780511524646}}
+
+@book{Hawking2023,
+	author = {Hawking, Stephen W. and Ellis, George F. R.},
+	date-added = {2025-06-10 07:13:58 -0400},
+	date-modified = {2025-06-10 07:13:58 -0400},
+	doi = {10.1017/9781009253161},
+	isbn = {9781009253154},
+	publisher = {Cambridge University Press},
+	title = {The Large Scale Structure of Space-Time: 50th Anniversary Edition},
+	url = {http://dx.doi.org/10.1017/9781009253161},
+	year = {2023},
+	bdsk-url-1 = {http://dx.doi.org/10.1017/9781009253161}}
+
+@book{Harvey1999,
+	date-added = {2025-06-10 07:12:00 -0400},
+	date-modified = {2025-06-10 07:12:35 -0400},
+	doi = {10.1007/978-1-4612-1422-9},
+	editor = {Alex Harvey},
+	isbn = {9781461214229},
+	publisher = {Springer New York},
+	title = {On Einstein's Path: Essays in Honor of Engelbert Schucking},
+	url = {http://dx.doi.org/10.1007/978-1-4612-1422-9},
+	year = {1999},
+	bdsk-url-1 = {http://dx.doi.org/10.1007/978-1-4612-1422-9}}
+
+@misc{HamiltonNotes2021,
+	author = {Andrew Hamilton},
+	date-added = {2025-06-10 07:09:53 -0400},
+	date-modified = {2025-06-10 07:11:22 -0400},
+	howpublished = {Web Page: \url{https://jila.colorado.edu/~ajsh/courses/astr5770_21/grbook.pdf}},
+	title = {{General Relativity, Black Holes, and Cosmology}},
+	year = {2021}}
+
+@book{Fre2013b,
+	author = {Fr{\`e}, Pietro Giuseppe},
+	date-added = {2025-06-10 07:01:17 -0400},
+	date-modified = {2025-06-10 07:01:27 -0400},
+	doi = {10.1007/978-94-007-5443-0},
+	isbn = {9789400754430},
+	publisher = {Springer Netherlands},
+	title = {Gravity, a Geometrical Course, Vol. 2},
+	url = {http://dx.doi.org/10.1007/978-94-007-5443-0},
+	year = {2013},
+	bdsk-url-1 = {http://dx.doi.org/10.1007/978-94-007-5443-0}}
+
+@book{Fre2013a,
+	author = {Fr{\`e}, Pietro Giuseppe},
+	date-added = {2025-06-10 07:00:36 -0400},
+	date-modified = {2025-06-10 07:01:52 -0400},
+	doi = {10.1007/978-94-007-5361-7},
+	isbn = {9789400753617},
+	publisher = {Springer Netherlands},
+	title = {Gravity, a Geometrical Course, Vol. 1},
+	url = {http://dx.doi.org/10.1007/978-94-007-5361-7},
+	year = {2013},
+	bdsk-url-1 = {http://dx.doi.org/10.1007/978-94-007-5361-7}}
 
 @article{Riehl2025,
 	author = {Mario Carneiro and Emily Riehl},
@@ -7573,18 +7702,6 @@
 	publisher = {Dover},
 	title = {Sources of quantum mechanics},
 	year = {1968}}
-
-@book{Harvey1999,
-	date-added = {2023-07-23 21:56:57 -0400},
-	date-modified = {2023-07-23 21:57:15 -0400},
-	doi = {10.1007/978-1-4612-1422-9},
-	editor = {Alex Harvey},
-	publisher = {Springer New York},
-	title = {On Einstein's Path},
-	url = {https://doi.org/10.1007%2F978-1-4612-1422-9},
-	year = 1999,
-	bdsk-url-1 = {https://doi.org/10.1007%2F978-1-4612-1422-9},
-	bdsk-url-2 = {https://doi.org/10.1007/978-1-4612-1422-9}}
 
 @article{Echeverria1999,
 	author = {Echeverria-Enriquez, Arturo and Munoz-Lecanda, Miguel C and Rom{\'a}n-Roy, Narciso and Victoria-Monge, Carles},
