--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,278 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2025-06-10 07:31:14 -0400 
+%% Created for Pete Su at 2025-06-10 20:38:08 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{Woodhouse2007,
+	author = {Woodhouse, Nicholas Michael John},
+	date-added = {2025-06-10 20:36:59 -0400},
+	date-modified = {2025-06-10 20:37:06 -0400},
+	publisher = {Springer Science \& Business Media},
+	title = {General relativity},
+	year = {2007}}
+
+@book{Wald1984,
+	author = {Wald, Robert M},
+	date-added = {2025-06-10 20:35:30 -0400},
+	date-modified = {2025-06-10 20:35:40 -0400},
+	publisher = {University of Chicago press},
+	title = {General relativity},
+	year = {1984}}
+
+@book{Thiemann2008,
+	author = {Thiemann, Thomas},
+	date-added = {2025-06-10 20:34:06 -0400},
+	date-modified = {2025-06-10 20:34:14 -0400},
+	publisher = {Cambridge University Press},
+	title = {Modern canonical quantum general relativity},
+	year = {2008}}
+
+@book{Gutfreund2015,
+	author = {Gutfreund, Hanoch and Renn, J{\"u}rgen},
+	date-added = {2025-06-10 20:32:12 -0400},
+	date-modified = {2025-06-10 20:33:12 -0400},
+	publisher = {Princeton University Press},
+	title = {{The Road to Relativity: The History and Meaning of Einstein's ``The Foundation of General Relativity''}},
+	year = {2015}}
+
+@article{Wright2013,
+	author = {Wright, Aaron Sidney},
+	date-added = {2025-06-10 20:31:15 -0400},
+	date-modified = {2025-06-10 20:31:25 -0400},
+	journal = {Endeavour},
+	number = {3},
+	pages = {133--139},
+	publisher = {Elsevier},
+	title = {The origins of Penrose diagrams in physics, art, and the psychology of perception, 1958--62},
+	volume = {37},
+	year = {2013}}
+
+@article{Schwarzschild1916Arxiv,
+	author = {K. Schwarzschild (translated by S.Antoci and A.Loinger)},
+	date-added = {2025-06-10 20:27:49 -0400},
+	date-modified = {2025-06-10 20:29:02 -0400},
+	journal = {arXiv preprint},
+	note = {\href{http://arxiv.org/abs/physics/9905030v1}{arxiv:physics/9905030}},
+	title = {{On the gravitational field of a mass point according to Einstein's theory}},
+	year = {1999}}
+
+@article{Schwarzschild1916,
+	author = {Schwarzschild, Karl},
+	date-added = {2025-06-10 20:26:22 -0400},
+	date-modified = {2025-06-10 20:26:50 -0400},
+	journal = {The Abraham Zelmanov Journal: The Journal for General Relativity, Gravitation and Cosmology},
+	pages = {10--19},
+	title = {{On the gravitational field of a point-mass, according to Einstein's theory (Larissa Borissova and Dmitri Rabounski (2008) Trans.)}},
+	volume = {1},
+	year = {1916}}
+
+@book{Sachs1977,
+	author = {Sachs, Rainer K. and Wu, Hung-Hsi},
+	date-added = {2025-06-10 20:18:23 -0400},
+	date-modified = {2025-06-10 20:18:23 -0400},
+	doi = {10.1007/978-1-4612-9903-5},
+	isbn = {9781461299035},
+	issn = {0072-5285},
+	journal = {Grad. Texts Math.},
+	publisher = {Springer New York},
+	title = {General Relativity for Mathematicians},
+	url = {http://dx.doi.org/10.1007/978-1-4612-9903-5},
+	year = {1977},
+	bdsk-url-1 = {http://dx.doi.org/10.1007/978-1-4612-9903-5}}
+
+@book{Rindler2006,
+	author = {Rindler, Wolfgang},
+	date-added = {2025-06-10 20:17:29 -0400},
+	date-modified = {2025-06-10 20:17:40 -0400},
+	doi = {10.1093/oso/9780198567318.001.0001},
+	isbn = {9780198567318},
+	month = {04},
+	publisher = {Oxford University Press},
+	title = {Relativity: Special, General, And Cosmological Second Edition},
+	url = {https://doi.org/10.1093/oso/9780198567318.001.0001},
+	year = {2006},
+	bdsk-url-1 = {https://doi.org/10.1093/oso/9780198567318.001.0001}}
+
+@book{Rindler1977,
+	author = {Rindler, Wolfgang},
+	date-added = {2025-06-10 20:16:32 -0400},
+	date-modified = {2025-06-10 20:16:32 -0400},
+	doi = {10.1007/978-3-642-86650-0},
+	isbn = {9783642866500},
+	publisher = {Springer Berlin Heidelberg},
+	title = {Essential Relativity},
+	url = {http://dx.doi.org/10.1007/978-3-642-86650-0},
+	year = {1977},
+	bdsk-url-1 = {http://dx.doi.org/10.1007/978-3-642-86650-0}}
+
+@article{Possel2017,
+	author = {Markus P{\"o}ssel},
+	date-added = {2025-06-10 20:15:42 -0400},
+	date-modified = {2025-06-10 20:15:55 -0400},
+	journal = {arXiv preprint},
+	note = {\href{http://arxiv.org/abs/1712.10315v1}{arxiv:1712.10315}},
+	title = {{The expanding universe: an introduction}},
+	year = {2017}}
+
+@book{Penrose1984,
+	author = {Penrose, R. and Rindler, W.},
+	date-added = {2025-06-10 20:14:51 -0400},
+	date-modified = {2025-06-10 20:14:58 -0400},
+	isbn = {9780521337076},
+	lccn = {lc82019861},
+	number = {v. 1},
+	publisher = {Cambridge University Press},
+	series = {Cambridge monographs on mathematical physics},
+	title = {Spinors and Space-time},
+	url = {https://books.google.com/books?id=CzhhKkf1xJUC},
+	year = {1984},
+	bdsk-url-1 = {https://books.google.com/books?id=CzhhKkf1xJUC}}
+
+@article{Penrose1963,
+	author = {Penrose, Roger},
+	date-added = {2025-06-10 20:13:31 -0400},
+	date-modified = {2025-06-10 20:13:31 -0400},
+	doi = {10.1103/physrevlett.10.66},
+	issn = {0031-9007},
+	journal = {Phys. Rev. Lett.},
+	number = {2},
+	pages = {66--68},
+	publisher = {American Physical Society (APS)},
+	title = {Asymptotic Properties of Fields and Space-Times},
+	url = {http://dx.doi.org/10.1103/physrevlett.10.66},
+	volume = {10},
+	year = {1963},
+	bdsk-url-1 = {http://dx.doi.org/10.1103/physrevlett.10.66}}
+
+@book{Padmanabhan2010,
+	author = {Padmanabhan, Thanu},
+	date-added = {2025-06-10 20:09:32 -0400},
+	date-modified = {2025-06-10 20:09:43 -0400},
+	publisher = {Cambridge University Press},
+	title = {Gravitation: foundations and frontiers},
+	year = {2010}}
+
+@misc{Blau2025GR,
+	author = {Matthias Blau},
+	date-added = {2025-06-10 20:05:25 -0400},
+	date-modified = {2025-06-10 20:08:03 -0400},
+	howpublished = {Online Notes},
+	note = {\href{http://www.blau.itp.unibe.ch/GRLecturenotes.html}{PDF}},
+	title = {Lecture Notes on General Relativity},
+	year = {2025}}
+
+@book{Nakahara2018,
+	author = {Nakahara, Mikio},
+	date-added = {2025-06-10 20:00:43 -0400},
+	date-modified = {2025-06-10 20:00:43 -0400},
+	doi = {10.1201/9781315275826},
+	isbn = {9781315275826},
+	publisher = {CRC Press},
+	title = {Geometry, Topology and Physics},
+	url = {http://dx.doi.org/10.1201/9781315275826},
+	year = {2018},
+	bdsk-url-1 = {http://dx.doi.org/10.1201/9781315275826}}
+
+@incollection{Malament2006-MALCRT,
+	author = {David Malament},
+	booktitle = {Philosophy of Physics},
+	date-added = {2025-06-10 19:58:27 -0400},
+	date-modified = {2025-06-10 19:58:27 -0400},
+	editor = {Jeremy Butterfield and John Earman},
+	publisher = {Elsevier},
+	title = {Classical Relativity Theory},
+	year = {2006}}
+
+@article{Earman1978,
+	author = {Earman, John and Glymour, Clark},
+	date-added = {2025-06-10 19:56:02 -0400},
+	date-modified = {2025-06-10 19:56:02 -0400},
+	doi = {10.1016/0039-3681(78)90008-0},
+	issn = {0039-3681},
+	journal = {Studies in History and Philosophy of Science Part A},
+	number = {4},
+	pages = {251--278},
+	publisher = {Elsevier BV},
+	title = {Lost in the tensors: Einstein's struggles with covariance principles 1912--1916},
+	url = {http://dx.doi.org/10.1016/0039-3681(78)90008-0},
+	volume = {9},
+	year = {1978},
+	bdsk-url-1 = {http://dx.doi.org/10.1016/0039-3681(78)90008-0}}
+
+@article{Lasenby1998,
+	author = {Lasenby, A. and Doran, C. and Gull, S.},
+	date-added = {2025-06-10 19:51:48 -0400},
+	date-modified = {2025-06-10 19:51:48 -0400},
+	doi = {10.1098/rsta.1998.0178},
+	editor = {Simons, J. P.},
+	issn = {1471-2962},
+	journal = {Philosophical Transactions of the Royal Society of London. Series A: Mathematical, Physical and Engineering Sciences},
+	note = {\href{http://arxiv.org/abs/gr-qc/0405033v1}{arxiv:gr-qc/0405033v1}},
+	number = {1737},
+	pages = {487--582},
+	publisher = {The Royal Society},
+	title = {Gravity, gauge theories and geometric algebra},
+	url = {http://dx.doi.org/10.1098/rsta.1998.0178},
+	volume = {356},
+	year = {1998},
+	bdsk-url-1 = {http://dx.doi.org/10.1098/rsta.1998.0178}}
+
+@book{Landsman2021b,
+	author = {Landsman, Klaas},
+	date-added = {2025-06-10 19:50:47 -0400},
+	date-modified = {2025-06-10 19:51:03 -0400},
+	doi = {10.54195/efvf4478},
+	isbn = {9789083178929},
+	publisher = {Radboud University Press},
+	title = {Foundations of General Relativity: From Einstein to Black Holes},
+	url = {http://dx.doi.org/10.54195/efvf4478},
+	year = {2021},
+	bdsk-url-1 = {http://dx.doi.org/10.54195/efvf4478}}
+
+@article{Kronheimer1967,
+	author = {Kronheimer, E. H. and Penrose, R.},
+	date-added = {2025-06-10 19:49:13 -0400},
+	date-modified = {2025-06-10 19:49:13 -0400},
+	doi = {10.1017/s030500410004144x},
+	issn = {1469-8064},
+	journal = {Math. Proc. Cambridge},
+	number = {2},
+	pages = {481--501},
+	publisher = {Cambridge University Press (CUP)},
+	title = {On the structure of causal spaces},
+	url = {http://dx.doi.org/10.1017/s030500410004144x},
+	volume = {63},
+	year = {1967},
+	bdsk-url-1 = {http://dx.doi.org/10.1017/s030500410004144x}}
+
+@book{kriele2003,
+	author = {Kriele, M.},
+	date-added = {2025-06-10 19:48:32 -0400},
+	date-modified = {2025-06-10 19:48:40 -0400},
+	isbn = {9783540483540},
+	publisher = {Springer Berlin Heidelberg},
+	series = {Lecture Notes in Physics Monographs},
+	title = {Spacetime: Foundations of General Relativity and Differential Geometry},
+	url = {https://books.google.com/books?id=9LoPBwAAQBAJ},
+	year = {2003},
+	bdsk-url-1 = {https://books.google.com/books?id=9LoPBwAAQBAJ}}
+
+@book{Krasnov2020,
+	author = {Krasnov, Kirill},
+	date-added = {2025-06-10 19:45:10 -0400},
+	date-modified = {2025-06-10 19:45:10 -0400},
+	doi = {10.1017/9781108674652},
+	isbn = {9781108481649},
+	publisher = {Cambridge University Press},
+	title = {Formulations of General Relativity: Gravity, Spinors and Differential Forms},
+	url = {http://dx.doi.org/10.1017/9781108674652},
+	year = {2020},
+	bdsk-url-1 = {http://dx.doi.org/10.1017/9781108674652}}
 
 @article{Kibble1961,
 	author = {Kibble, T. W. B.},
@@ -1385,9 +1651,9 @@
 @book{Sanders2010,
 	author = {Sanders, Robert H},
 	date-added = {2023-09-08 20:34:09 -0400},
-	date-modified = {2023-09-08 20:34:10 -0400},
+	date-modified = {2025-06-10 20:20:14 -0400},
 	publisher = {Cambridge University Press},
-	title = {The dark matter problem: a historical perspective},
+	title = {The Dark Matter Problem: A Historical Perspective},
 	year = {2010}}
 
 @article{Zeldovich1971,
@@ -2832,8 +3098,9 @@
 @incollection{Penrose2019,
 	author = {Penrose, Roger},
 	booktitle = {Topology and Physics},
+	chapter = {5},
 	date-added = {2023-08-21 07:18:51 -0400},
-	date-modified = {2023-08-21 07:18:56 -0400},
+	date-modified = {2025-06-10 20:12:10 -0400},
 	pages = {135--171},
 	publisher = {World Scientific},
 	title = {Singularity theorems},
@@ -8932,18 +9199,6 @@
 	bdsk-url-1 = {https://doi.org/10.1007%2F978-3-642-62029-4},
 	bdsk-url-2 = {https://doi.org/10.1007/978-3-642-62029-4}}
 
-@book{MacLane1994,
-	author = {Saunders Mac Lane and Ieke Moerdijk},
-	date-added = {2023-07-18 07:15:51 -0400},
-	date-modified = {2023-07-18 07:15:58 -0400},
-	doi = {10.1007/978-1-4612-0927-0},
-	publisher = {Springer New York},
-	title = {Sheaves in Geometry and Logic},
-	url = {https://doi.org/10.1007%2F978-1-4612-0927-0},
-	year = 1994,
-	bdsk-url-1 = {https://doi.org/10.1007%2F978-1-4612-0927-0},
-	bdsk-url-2 = {https://doi.org/10.1007/978-1-4612-0927-0}}
-
 @article{MacLane1998,
 	author = {Saunders {Mac Lane}},
 	date-added = {2023-07-18 07:13:51 -0400},
@@ -9634,12 +9889,12 @@
 	title = {{Introduction to Categories and Categorical Logic}},
 	year = {2011}}
 
-@article{Landsman2021,
+@article{Landsman2021a,
 	abstract = {In the light of his recent (and fully deserved) Nobel Prize, this pedagogical paper draws attention to a fundamental tension that drove Penrose's work on general relativity. His 1965 singularity theorem (for which he got the prize) does not in fact imply the existence of black holes (even if its assumptions are met). Similarly, his versatile definition of a singular space--time does not match the generally accepted definition of a black hole (derived from his concept of null infinity). To overcome this, Penrose launched his cosmic censorship conjecture(s), whose evolution we discuss. In particular, we review both his own (mature) formulation and its later, inequivalent reformulation in the pde literature. As a compromise, one might say that in ``generic''or ``physically reasonable''space--times, weak cosmic censorship postulates the appearance and stability of event horizons, whereas strong cosmic censorship asks for the instability and ensuing disappearance of Cauchy horizons. As an encore, an ``Appendix''by Erik Curiel reviews the early history of the definition of a black hole.},
 	author = {Landsman, Klaas},
 	date = {2021/03/31},
 	date-added = {2023-07-15 08:50:04 -0400},
-	date-modified = {2023-08-10 07:07:28 -0400},
+	date-modified = {2025-06-10 19:50:54 -0400},
 	doi = {10.1007/s10701-021-00432-1},
 	id = {Landsman2021},
 	isbn = {1572-9516},
