--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,44 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2025-06-10 20:38:08 -0400 
+%% Created for Pete Su at 2025-06-11 06:46:02 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Atlas2012,
+	author = {ATLAS Collaboration},
+	date-added = {2025-06-11 06:45:07 -0400},
+	date-modified = {2025-06-11 06:46:02 -0400},
+	journal = {Physics Letters B},
+	note = {\href{https://arxiv.org/abs/1207.7214}{arXiv:1207.7214}},
+	number = {1},
+	pages = {1--29},
+	publisher = {Elsevier},
+	title = {Observation of a new particle in the search for the Standard Model Higgs boson with the ATLAS detector at the LHC},
+	volume = {716},
+	year = {2012}}
+
+@article{Donoghue2017,
+	author = {John F. Donoghue and Mikhail M. Ivanov and Andrey Shkerin},
+	date-added = {2025-06-11 06:37:38 -0400},
+	date-modified = {2025-06-11 06:37:47 -0400},
+	journal = {arXiv preprint},
+	note = {\href{http://arxiv.org/abs/1702.00319v1}{arxiv:1702.00319}},
+	title = {{EPFL Lectures on General Relativity as a Quantum Field Theory}},
+	year = {2017}}
+
+@book{Landau1971,
+	author = {Landau, Lev Davidovich and Lifshitz, Evgenii Mikhailovich},
+	date-added = {2025-06-10 20:57:36 -0400},
+	date-modified = {2025-06-10 20:58:22 -0400},
+	note = {3rd Edition},
+	publisher = {Pergamon Press},
+	title = {The Classical Theory of Fields},
+	volume = {3},
+	year = {1971}}
 
 @book{Woodhouse2007,
 	author = {Woodhouse, Nicholas Michael John},
@@ -2005,15 +2037,6 @@
 	year = 2004,
 	bdsk-url-1 = {https://doi.org/10.1007%2F978-3-662-05394-2},
 	bdsk-url-2 = {https://doi.org/10.1007/978-3-662-05394-2}}
-
-@article{Donoghue2017,
-	author = {Donoghue, John F and Ivanov, Mikhail M and Shkerin, Andrey},
-	date-added = {2023-09-03 10:06:46 -0400},
-	date-modified = {2023-09-03 10:07:25 -0400},
-	journal = {arXiv preprint},
-	note = {\href{https://arxiv.org/abs/1702.00319}{arXiv:1702.00319}},
-	title = {{EPFL lectures on general relativity as a quantum field theory}},
-	year = {2017}}
 
 @article{Crispino2008,
 	author = {Lu{\'{\i}}s C. B. Crispino and Atsushi Higuchi and George E. A. Matsas},
@@ -8516,10 +8539,10 @@
 	title = {{``Thinking Quantum'': Lectures on Quantum Theory for High-School Students}},
 	year = {2018}}
 
-@book{Ballentine2014quantum,
+@book{Ballentine2014,
 	author = {Ballentine, Leslie E},
 	date-added = {2023-07-22 07:12:54 -0400},
-	date-modified = {2023-07-22 07:13:00 -0400},
+	date-modified = {2025-06-10 21:00:38 -0400},
 	publisher = {World Scientific Publishing Company},
 	title = {Quantum mechanics: a modern development},
 	year = {2014}}
