--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,25 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2025-06-11 06:46:02 -0400 
+%% Created for Pete Su at 2025-06-11 06:48:50 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{CMS2012,
+	author = {CMS Collaboration},
+	date-added = {2025-06-11 06:47:58 -0400},
+	date-modified = {2025-06-11 06:48:50 -0400},
+	journal = {Physics Letters B},
+	note = {{\href{http://arxiv.org/abs/1207.7235v2}{arxiv:1207.7235}}},
+	number = {1},
+	pages = {30--61},
+	publisher = {Elsevier},
+	title = {Observation of a new boson at a mass of 125 GeV with the CMS experiment at the LHC},
+	volume = {716},
+	year = {2012}}
 
 @article{Atlas2012,
 	author = {ATLAS Collaboration},
