--- a/2503.20704/cat-has-colimits.tex
+++ b/2503.20704/cat-has-colimits.tex
@@ -2,7 +2,7 @@
 \pdfoutput=1 %uncomment to ensure pdflatex processing (mandatatory e.g. to submit to arXiv)
 
 \usepackage[papersize={6.0in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
-\linespread{1.1}
+\linespread{1.03}
 \sloppy
 \raggedbottom
 \pagestyle{plain}
@@ -256,7 +256,7 @@ bookmarksopenlevel=10
 \newpage
 \section{Introduction}
 
-One of the myriad ways in which ``category theory eats itself'' is that the categorically-defined notions of limits and colimit can be interpreted in the category $\Cat$ itself, whose objects are categories\footnote{An important point that is often elided on paper but is necessary to treat precisely in formalization is that the category of categories \cdoc{Cat}.\texttt{\{v,u\}} is parametrized by two implicit universe levels, one \texttt{u} for the type of objects and one \texttt{v} for the hom-types.} and functors between them. Any suitably-small diagram of categories and functors has a \emph{limit} in $\Cat$ which is constructed by forming the limit of the corresponding diagrams of objects and hom-sets.\footnote{The definition of \emph{limit} is reviewed in \S\ref{sec:strict-segal}; \emph{colimits} are dual, formed by reversing the arrows.} For example, the \emph{product} of two categories $C$ and $D$ is the category whose objects are defined as the product $\ob\,\,C \times \ob\,D$ of the types of objects of $C$ and $D$. Given objects $c,c' : \ob\,C$ and $d,d' : \ob\,D$, the hom-type from $(c,d)$ to $(c',d')$ in the product category is the product $\Hom_C(c,c') \times \Hom_D(d,d')$ of the hom-types in $C$ and $D$.
+One of the myriad ways in which ``category theory eats itself'' is that the categorically-defined notions of limits and colimit can be interpreted in the category $\Cat$ itself, whose objects are categories\footnote{An important point that is often elided on paper but is necessary to treat precisely in formalization is that the category of categories \cdoc{Cat}.\texttt{\{v,u\}} is parametrized by two implicit universe levels, one \texttt{u} for the type of objects and one \texttt{v} for the hom-types.} and functors between them. Any suitably-small diagram of categories and functors has a \emph{limit} in $\Cat$ which is constructed by forming the limit of the corresponding diagrams of objects and hom-sets.\footnote{The definition of \emph{limit} is reviewed in \S\ref{sec:strict-segal}; \emph{colimits} are dual, formed by reversing the arrows.} For example, the \emph{product} of two categories $C$ and $D$ is the category whose objects are defined as the product $\ob\ \! C \times \ob\,D$ of the types of objects of $C$ and $D$. Given objects $c,c' : \ob\ \! C$ and $d,d' : \ob\,D$, the hom-type from $(c,d)$ to $(c',d')$ in the product category is the product $\Hom_C(c,c') \times \Hom_D(d,d')$ of the hom-types in $C$ and $D$.
 The generalization of this construction to arbitrary diagram shapes is formalized in Lean's \libmathlib{} as \cdoc{Cat.instHasLimits} by Kim Morrison.
 
 It is also the case that any suitably-small diagram in $\Cat$ has a colimit, but the construction is considerably more complicated. To illustrate, consider the terminal category $\Fin(1)$ (with one object and only its identity arrow) and the walking arrow $\Fin(2)$ (with two objects $0$ and $1$ and a single non-identity morphism $\ell \colon 0 \to 1$). The \emph{coequalizer} of the parallel pair of functors $0,1 \colon \Fin(1) \to \Fin(2)$ that pick out these two objects is the category $\cat{B}\NN$ with a single object but with a morphism for each natural number, with composition defined by addition and the morphism $0$ serving as the identity. The quotient functor $q \colon \Fin(2) \to \cat{B}\NN$ sends the morphism $\ell$ to the generating non-identity morphism $1$.
