--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,128 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2025-06-11 06:48:50 -0400 
+%% Created for Pete Su at 2025-06-11 19:23:36 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{Pandolfi2013,
+	author = {Pandolfi, Francesco},
+	date-added = {2025-06-11 19:18:23 -0400},
+	date-modified = {2025-06-11 19:23:22 -0400},
+	doi = {10.1007/978-3-319-00903-2},
+	isbn = {9783319009032},
+	issn = {2190-5061},
+	journal = {Springer Theses},
+	publisher = {Springer International Publishing},
+	title = {{Search for the Standard Model Higgs Boson in the H $\rightarrow$ ZZ $\rightarrow$ $\ell ^+ \ell^-$$q\bar q$ Decay Channel at CMS}},
+	url = {http://dx.doi.org/10.1007/978-3-319-00903-2},
+	year = {2013},
+	bdsk-url-1 = {http://dx.doi.org/10.1007/978-3-319-00903-2}}
+
+@book{Grupen2012,
+	date-added = {2025-06-11 19:15:36 -0400},
+	date-modified = {2025-06-11 19:16:35 -0400},
+	doi = {10.1007/978-3-642-13271-1},
+	editor = {Claus Grupen and Ir{\`e}ne Buvat},
+	isbn = {9783642132711},
+	publisher = {Springer Berlin Heidelberg},
+	title = {Handbook of Particle Detection and Imaging},
+	url = {http://dx.doi.org/10.1007/978-3-642-13271-1},
+	year = {2012},
+	bdsk-url-1 = {http://dx.doi.org/10.1007/978-3-642-13271-1}}
+
+@book{Rolandi2008,
+	author = {Rolandi, Luigi and Riegler, Werner and Blum, Walter},
+	date-added = {2025-06-11 19:15:07 -0400},
+	date-modified = {2025-06-11 19:15:07 -0400},
+	doi = {10.1007/978-3-540-76684-1},
+	isbn = {9783540766841},
+	issn = {1611-1052},
+	journal = {Part. Accel. Detect.},
+	publisher = {Springer Berlin Heidelberg},
+	title = {Particle Detection with Drift Chambers},
+	url = {http://dx.doi.org/10.1007/978-3-540-76684-1},
+	year = {2008},
+	bdsk-url-1 = {http://dx.doi.org/10.1007/978-3-540-76684-1}}
+
+@book{Rossi2006,
+	author = {Rossi, Leonardo and Fischer, Peter and Rohe, Tilman and Wermes, Norbert},
+	date-added = {2025-06-11 19:14:29 -0400},
+	date-modified = {2025-06-11 19:14:29 -0400},
+	doi = {10.1007/3-540-28333-1},
+	isbn = {9783540283331},
+	issn = {1611-1052},
+	journal = {Part. Accel. Detect.},
+	publisher = {Springer Berlin Heidelberg},
+	title = {Pixel Detectors: From Fundamentals to Applications},
+	url = {http://dx.doi.org/10.1007/3-540-28333-1},
+	year = {2006},
+	bdsk-url-1 = {http://dx.doi.org/10.1007/3-540-28333-1}}
+
+@book{Latal1990,
+	date-added = {2025-06-11 19:12:50 -0400},
+	date-modified = {2025-06-11 19:13:35 -0400},
+	doi = {10.1007/978-3-642-75567-5},
+	editor = {Heinrich Mitter and Heimo Latal},
+	isbn = {9783642755675},
+	publisher = {Springer Berlin Heidelberg},
+	title = {Physics for a New Generation: Prospects for High-Energy Physics at New Accelerators Proceedings of the XXVIII Int. Universit{\"a}tswochen f{\"u}r Kernphysik, Schladming, Austria, March 1989},
+	url = {http://dx.doi.org/10.1007/978-3-642-75567-5},
+	year = {1990},
+	bdsk-url-1 = {http://dx.doi.org/10.1007/978-3-642-75567-5}}
+
+@article{Flechl2015,
+	author = {Flechl, Martin},
+	date-added = {2025-06-11 19:10:58 -0400},
+	date-modified = {2025-06-11 19:12:23 -0400},
+	doi = {10.1088/1742-6596/631/1/012028},
+	issn = {1742-6596},
+	journal = {Journal of Physics: Conference Series},
+	note = {\href{https://arxiv.org/abs/1503.00632}{arxiv:1503.00632}},
+	pages = {012028},
+	publisher = {IOP Publishing},
+	title = {Higgs physics: Review of recent results and prospects from ATLAS and CMS},
+	url = {http://dx.doi.org/10.1088/1742-6596/631/1/012028},
+	volume = {631},
+	year = {2015},
+	bdsk-url-1 = {http://dx.doi.org/10.1088/1742-6596/631/1/012028}}
+
+@article{Ky2015,
+	author = {Ky, Nguyen Anh and Van, Nguyen Thi Hong},
+	date-added = {2025-06-11 19:10:12 -0400},
+	date-modified = {2025-06-11 19:10:12 -0400},
+	doi = {10.15625/0868-3166/25/1/5941},
+	issn = {0868-3166},
+	journal = {Communications in Physics},
+	note = {\href{http://arxiv.org/abs/1503.08630v2}{arxiv:1503.08630v2}},
+	number = {1},
+	pages = {1},
+	publisher = {Publishing House for Science and Technology, Vietnam Academy of Science and Technology (Publications)},
+	title = {Was the Higgs Boson Discovered?},
+	url = {http://dx.doi.org/10.15625/0868-3166/25/1/5941},
+	volume = {25},
+	year = {2015},
+	bdsk-url-1 = {http://dx.doi.org/10.15625/0868-3166/25/1/5941}}
+
+@article{Ellis2017,
+	author = {Ellis, John},
+	date-added = {2025-06-11 19:06:58 -0400},
+	date-modified = {2025-06-11 19:06:58 -0400},
+	doi = {10.1142/s0217751x17460010},
+	issn = {1793-656X},
+	journal = {Int. J. Mod. Phys. A},
+	note = {\href{http://arxiv.org/abs/1704.02821v1}{arxiv:1704.02821v1}},
+	number = {34},
+	pages = {1746001},
+	publisher = {World Scientific Pub Co Pte Ltd},
+	title = {Where is particle physics going?},
+	url = {http://dx.doi.org/10.1142/s0217751x17460010},
+	volume = {32},
+	year = {2017},
+	bdsk-url-1 = {http://dx.doi.org/10.1142/s0217751x17460010}}
 
 @article{CMS2012,
 	author = {CMS Collaboration},
