--- a/previewtemplate.tex
+++ b/previewtemplate.tex
@@ -2,7 +2,7 @@
 \usepackage{url}
 \pagestyle{empty}
 \textwidth = 6.5in
-\voffset = -105pt
+\voffset = -135pt
 \hoffset = -120pt
 \renewcommand{\refname}{}
 \usepackage[colorlinks=true
@@ -16,6 +16,7 @@
 
 \usepackage{amsmath}
 \usepackage{amssymb}
+\usepackage[T1]{fontenc}
 
 % The following command is provided for LaTeX2RTF compatibility with amslatex.
 \newif\iflatextortf
