--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,167 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2025-06-18 21:17:54 -0400 
+%% Created for Pete Su at 2025-06-19 19:54:54 -0700 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Konstantinov1998,
+	author = {Konstantinov, D and Homsi, W and Luzuriaga, J and Su, C-K and Weilert, MA and Maris, HJ},
+	date-added = {2025-06-19 19:54:25 -0700},
+	date-modified = {2025-06-19 19:54:37 -0700},
+	journal = {Journal of low temperature physics},
+	pages = {485--490},
+	publisher = {Springer},
+	title = {How does a bubble chamber work?},
+	volume = {113},
+	year = {1998}}
+
+@article{Glaser1955,
+	author = {Donald A. Glaser},
+	date-added = {2025-06-19 19:47:12 -0700},
+	date-modified = {2025-06-19 19:47:33 -0700},
+	issn = {00368733, 19467087},
+	journal = {Scientific American},
+	number = {2},
+	pages = {46--51},
+	publisher = {Scientific American, a division of Nature America, Inc.},
+	title = {The Bubble Chamber},
+	url = {http://www.jstor.org/stable/24944549},
+	urldate = {2025-06-19},
+	volume = {192},
+	year = {1955},
+	bdsk-url-1 = {http://www.jstor.org/stable/24944549}}
+
+@book{Kolanoski2020,
+	author = {Kolanoski, Hermann and Wermes, Norbert},
+	date-added = {2025-06-19 19:45:16 -0700},
+	date-modified = {2025-06-19 19:45:16 -0700},
+	doi = {10.1093/oso/9780198858362.001.0001},
+	isbn = {9780191890710},
+	publisher = {Oxford University PressOxford},
+	title = {Particle Detectors: Fundamentals and Applications},
+	url = {http://dx.doi.org/10.1093/oso/9780198858362.001.0001},
+	year = {2020},
+	bdsk-url-1 = {http://dx.doi.org/10.1093/oso/9780198858362.001.0001}}
+
+@article{Kibble1967,
+	author = {Kibble, T. W. B.},
+	date-added = {2025-06-19 19:42:21 -0700},
+	date-modified = {2025-06-19 19:42:21 -0700},
+	doi = {10.1103/physrev.155.1554},
+	issn = {0031-899X},
+	journal = {Phys. Rev.},
+	number = {5},
+	pages = {1554--1561},
+	publisher = {American Physical Society (APS)},
+	title = {Symmetry Breaking in Non-Abelian Gauge Theories},
+	url = {http://dx.doi.org/10.1103/physrev.155.1554},
+	volume = {155},
+	year = {1967},
+	bdsk-url-1 = {http://dx.doi.org/10.1103/physrev.155.1554}}
+
+@article{Kibble2015,
+	author = {Kibble, T. W. B.},
+	date-added = {2025-06-19 19:41:35 -0700},
+	date-modified = {2025-06-19 19:41:35 -0700},
+	doi = {10.1098/rsta.2014.0033},
+	issn = {1471-2962},
+	journal = {Philosophical Transactions of the Royal Society A: Mathematical, Physical and Engineering Sciences},
+	number = {2032},
+	pages = {20140033},
+	publisher = {The Royal Society},
+	title = {Spontaneous symmetry breaking in gauge theories},
+	url = {http://dx.doi.org/10.1098/rsta.2014.0033},
+	volume = {373},
+	year = {2015},
+	bdsk-url-1 = {http://dx.doi.org/10.1098/rsta.2014.0033}}
+
+@book{Kane_2017,
+	author = {Kane, Gordon},
+	date-added = {2025-06-19 19:40:47 -0700},
+	date-modified = {2025-06-19 19:40:47 -0700},
+	edition = {2},
+	place = {Cambridge},
+	publisher = {Cambridge University Press},
+	title = {Modern Elementary Particle Physics: Explaining and Extending the Standard Model},
+	year = {2017}}
+
+@article{PerretGallix2013,
+	author = {Perret-Gallix, Denis},
+	date-added = {2025-06-19 19:35:36 -0700},
+	date-modified = {2025-06-19 19:35:36 -0700},
+	doi = {10.1088/1742-6596/454/1/012051},
+	issn = {1742-6596},
+	journal = {Journal of Physics: Conference Series},
+	note = {\href{http://arxiv.org/abs/1301.1211v1}{arxiv:1301.1211v1}},
+	pages = {012051},
+	publisher = {IOP Publishing},
+	title = {Computational particle physics for event generators and data analysis},
+	url = {http://dx.doi.org/10.1088/1742-6596/454/1/012051},
+	volume = {454},
+	year = {2013},
+	bdsk-url-1 = {http://dx.doi.org/10.1088/1742-6596/454/1/012051}}
+
+@article{Higgs1966,
+	author = {Higgs, Peter W.},
+	date-added = {2025-06-19 19:33:30 -0700},
+	date-modified = {2025-06-19 19:33:30 -0700},
+	doi = {10.1103/physrev.145.1156},
+	issn = {0031-899X},
+	journal = {Phys. Rev.},
+	number = {4},
+	pages = {1156--1163},
+	publisher = {American Physical Society (APS)},
+	title = {Spontaneous Symmetry Breakdown without Massless Bosons},
+	url = {http://dx.doi.org/10.1103/physrev.145.1156},
+	volume = {145},
+	year = {1966},
+	bdsk-url-1 = {http://dx.doi.org/10.1103/physrev.145.1156}}
+
+@article{Higgs2012,
+	author = {Higgs, Peter},
+	date-added = {2025-06-19 19:32:42 -0700},
+	date-modified = {2025-06-19 19:32:42 -0700},
+	doi = {10.1142/s2251158x12000264},
+	issn = {2251-1598},
+	journal = {Asia Pacific Physics Newsletter},
+	number = {02},
+	pages = {50--51},
+	publisher = {World Scientific Pub Co Pte Lt},
+	title = {My Life as a Boson: The Story of ``The Higgs''},
+	url = {http://dx.doi.org/10.1142/s2251158x12000264},
+	volume = {01},
+	year = {2012},
+	bdsk-url-1 = {http://dx.doi.org/10.1142/s2251158x12000264}}
+
+@article{Higgs1964b,
+	author = {Higgs, Peter W.},
+	date-added = {2025-06-19 19:31:19 -0700},
+	date-modified = {2025-06-19 19:31:31 -0700},
+	doi = {10.1103/physrevlett.13.508},
+	issn = {0031-9007},
+	journal = {Phys. Rev. Lett.},
+	number = {16},
+	pages = {508--509},
+	publisher = {American Physical Society (APS)},
+	title = {Broken Symmetries and the Masses of Gauge Bosons},
+	url = {http://dx.doi.org/10.1103/physrevlett.13.508},
+	volume = {13},
+	year = {1964},
+	bdsk-url-1 = {http://dx.doi.org/10.1103/physrevlett.13.508}}
+
+@article{Higgs1964a,
+	author = {Higgs, Peter Ware},
+	date-added = {2025-06-19 19:29:40 -0700},
+	date-modified = {2025-06-19 19:31:41 -0700},
+	journal = {Phys. Lett.},
+	pages = {132--133},
+	title = {Broken symmetries, massless particles and gauge fields},
+	volume = {12},
+	year = {1964}}
 
 @book{Henn2014,
 	author = {Henn, Johannes M. and Plefka, Jan C.},
@@ -674,10 +829,10 @@
 	year = {1967},
 	bdsk-url-1 = {http://dx.doi.org/10.1017/s030500410004144x}}
 
-@book{kriele2003,
+@book{Kriele2003,
 	author = {Kriele, M.},
 	date-added = {2025-06-10 19:48:32 -0400},
-	date-modified = {2025-06-10 19:48:40 -0400},
+	date-modified = {2025-06-19 19:54:54 -0700},
 	isbn = {9783540483540},
 	publisher = {Springer Berlin Heidelberg},
 	series = {Lecture Notes in Physics Monographs},
