--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,24 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2025-06-23 16:37:15 -0700 
+%% Created for Pete Su at 2025-06-23 16:46:57 -0700 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{Gunion2018,
+	author = {Gunion, John F. and Haber, Howard E. and Kane, Gordon and Sally, Dawson},
+	date-added = {2025-06-23 16:46:55 -0700},
+	date-modified = {2025-06-23 16:46:55 -0700},
+	doi = {10.1201/9780429496448},
+	isbn = {9780429496448},
+	publisher = {CRC Press},
+	title = {The Higgs Hunter's Guide},
+	url = {http://dx.doi.org/10.1201/9780429496448},
+	year = {2018},
+	bdsk-url-1 = {http://dx.doi.org/10.1201/9780429496448}}
 
 @inproceedings{Skands2013,
 	author = {Skands, P.},
