--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,35 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2025-06-23 16:46:57 -0700 
+%% Created for Pete Su at 2025-06-23 17:28:09 -0700 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{Wolf2015,
+	author = {Wolf, Roger},
+	date-added = {2025-06-23 17:28:06 -0700},
+	date-modified = {2025-06-23 17:28:06 -0700},
+	doi = {10.1007/978-3-319-18512-5},
+	isbn = {9783319185125},
+	issn = {1615-0430},
+	journal = {Springer Tracts in Modern Physics},
+	publisher = {Springer International Publishing},
+	title = {The Higgs Boson Discovery at the Large Hadron Collider},
+	url = {http://dx.doi.org/10.1007/978-3-319-18512-5},
+	year = {2015},
+	bdsk-url-1 = {http://dx.doi.org/10.1007/978-3-319-18512-5}}
+
+@article{Wells2009,
+	author = {James D. Wells},
+	date-added = {2025-06-23 17:27:09 -0700},
+	date-modified = {2025-06-23 17:27:16 -0700},
+	journal = {arXiv preprint},
+	note = {\href{http://arxiv.org/abs/0909.4541v1}{arxiv:0909.4541}},
+	title = {{Lectures on Higgs Boson Physics in the Standard Model and Beyond}},
+	year = {2009}}
 
 @book{Gunion2018,
 	author = {Gunion, John F. and Haber, Howard E. and Kane, Gordon and Sally, Dawson},
