--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,20 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2025-06-23 17:28:09 -0700 
+%% Created for Pete Su at 2025-06-23 17:38:36 -0700 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{Pais1986,
+	author = {Pais, Abraham},
+	date-added = {2025-06-23 17:37:31 -0700},
+	date-modified = {2025-06-23 17:38:36 -0700},
+	publisher = {{Oxford University Press}},
+	title = {Inward bound: of matter and forces in the physical world},
+	year = {1986}}
 
 @book{Wolf2015,
 	author = {Wolf, Roger},
