--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,28 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2025-06-23 17:38:36 -0700 
+%% Created for Pete Su at 2025-06-23 17:41:31 -0700 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Pais1952,
+	author = {Pais, A.},
+	date-added = {2025-06-23 17:40:47 -0700},
+	date-modified = {2025-06-23 17:41:28 -0700},
+	doi = {10.1103/physrev.86.663},
+	issn = {0031-899X},
+	journal = {Phys. Rev.},
+	number = {5},
+	pages = {663--672},
+	publisher = {American Physical Society (APS)},
+	title = {{Some Remarks on the $V$-Particles}},
+	url = {http://dx.doi.org/10.1103/physrev.86.663},
+	volume = {86},
+	year = {1952},
+	bdsk-url-1 = {http://dx.doi.org/10.1103/physrev.86.663}}
 
 @book{Pais1986,
 	author = {Pais, Abraham},
