--- a/0909.4541/HiggsLectures1.tex
+++ b/0909.4541/HiggsLectures1.tex
@@ -221,9 +221,9 @@ The lagrangian of QED is
 \eeq
 where 
 \beq
-D_\mu=\partial_\mu +iQA_\mu
+D_\mu=\partial_\mu +ieA_\mu
 \eeq
-and $Q=-1$ is the charge of the electron.
+and $e=-1$ is the charge of the electron.
 This lagrangian respects the $U(1)$ gauge symmetry
 \bea
 \psi & \to & e^{-i\alpha(x)}\psi \\
